# husarion_ws

./: .gitignore  README.md  README_mars_yard_v2.md
install/: local_setup.sh  setup.sh
install/behaviortree_ros2/include/behaviortree_ros2/: bt_action_node.hpp  (+8 more)
install/erc2025_remote_sim/share/erc2025_remote_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/erc2025_remote_sim/share/erc2025_remote_sim/config/: components.yaml  start_locations.yaml  teleop.config  zed_modified.urdf.xacro
install/erc2025_remote_sim/share/erc2025_remote_sim/environment/: env.sh
install/erc2025_remote_sim/share/erc2025_remote_sim/launch/: sim_world.launch.py  startsimulation.launch.py
install/erc2025_remote_sim/share/erc2025_remote_sim/models/marsyard2024/: model.config  model.sdf
install/erc2025_remote_sim/share/erc2025_remote_sim/worlds/: marsyard2024.world
install/husarion_ugv_hardware_interfaces/lib/: libgpiod.la  libgpiod.so.3  libgpiod.so.3.0.1  libgpiodcxx.la  liblely-co.so.2.3.3  liblely-ev.so.2  liblely-ev.so.2.3.3  liblely-io.la  liblely-io2.so.2.3.3  liblely-libc.la  liblely-libc.so.2  liblely-libc.so.2.3.3  liblely-util.so.2.3.3
log/: latest_build
src/husarion_gz_worlds/worlds/: mars_yard.sdf
src/mars_yard_sim/: CMakeLists.txt  README.md  package.xml  start_simulation.sh
src/mars_yard_sim/launch/: mars_yard_simulation.launch.py  mars_yard_with_panther.launch.py  start_mars_yard.launch.py
src/mars_yard_sim/models/panther_robot/: model.config  model.sdf  panther.urdf
src/mars_yard_sim/worlds/: mars_yard.sdf
(+839 files in other folders)
