<?xml version="1.0"?>
<package format="3">
  <name>erc2025_remote_sim</name>
  <version>0.1.0</version>
  <description>ERC 2024 marsyard</description>
  <maintainer email="tu@email.com">Il Tuo Nome</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_gz_sim</depend>


 <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
